--- a/packages/ui/src/components/Checkbox/style.less
+++ b/packages/ui/src/components/Checkbox/style.less
@@ -34,99 +34,53 @@
       }
     }
 
-    &-input {
-      &:focus {
-        & + .condo-checkbox-inner {
-          background: @condo-global-color-brand-gradient-5 border-box;
-          border-color: transparent;
-
-          &::before {
-            .condo-checkbox-inner-layer(@condo-global-color-white, @checkbox-inner-border-radius);
-          }
-        }
-      }
-    }
-
-    &-indeterminate {
-      & > .condo-checkbox-input {
-        &:focus {
-          & + .condo-checkbox-inner {
-            &::before {
-              .condo-checkbox-inner-layer(@condo-global-color-brand-gradient-1, @checkbox-inner-border-radius);
-            }
-          }
-        }
-      }
-
-      & > .condo-checkbox-inner {
-        &::after {
-          width: @condo-global-spacing-12;
-          height: @condo-global-spacing-4;
-          background: @condo-global-color-brand-gradient-5 border-box;
-          border-radius: @condo-global-border-width-default;
-        }
-
-        &::before {
-          .condo-checkbox-inner-layer(@condo-global-color-brand-gradient-1, @checkbox-inner-border-radius);
-        }
-      }
-    }
-
-    &-indeterminate.condo-checkbox-disabled {
-      & > .condo-checkbox-inner {
-        &::after {
-          background: @condo-global-color-gray-5;
-        }
-
-        &::before {
-          .condo-checkbox-inner-layer(@condo-global-color-white, @checkbox-inner-border-radius);
-        }
-      }
-    }
-
-    &-checked {
+    &-indeterminate > .condo-checkbox-inner {
       &::after {
-        border: none;
+        width: @condo-global-spacing-12;
+        height: @condo-global-spacing-4;
+        background: @condo-global-color-brand-gradient-5 border-box;
+        border-radius: @condo-global-border-width-default;
       }
 
-      & > .condo-checkbox-input {
-        &:focus {
-          & + .condo-checkbox-inner {
-            background: @condo-global-color-brand-gradient-5 border-box;
-            border-color: transparent;
+      &::before {
+        .condo-checkbox-inner-layer(@condo-global-color-brand-gradient-1, @checkbox-inner-border-radius);
+      }
+    }
 
-            &::before {
-              .condo-checkbox-inner-layer(@condo-global-color-brand-gradient-1, @checkbox-inner-border-radius);
-            }
-          }
-        }
+    &-checked::after {
+      border: none;
+    }
+
+    &-checked > .condo-checkbox-inner {
+      box-sizing: content-box;
+      background: @condo-global-color-gray-5 border-box;
+      border-color: transparent;
+
+      &::before {
+        .condo-checkbox-inner-layer(@condo-global-color-brand-gradient-1, @checkbox-inner-border-radius);
       }
 
-      & > .condo-checkbox-inner {
+      &::after {
+        top: @condo-checkbox-checkmark-top - 1;
+        left: @condo-checkbox-checkmark-left;
         box-sizing: content-box;
-        background: @condo-global-color-gray-5 border-box;
-        border-color: transparent;
-
-        &::before {
-          .condo-checkbox-inner-layer(@condo-global-color-brand-gradient-1, @checkbox-inner-border-radius);
-        }
-
-        &::after {
-          top: @condo-checkbox-checkmark-top - 1;
-          left: @condo-checkbox-checkmark-left;
-          box-sizing: content-box;
-          width: @condo-checkbox-checkmark-width;
-          height: @condo-checkbox-checkmark-height;
-          border-width: 3px;
-          border-image-source: linear-gradient(45deg, #4cd174 0%, #6db8f2 100%);
-          border-image-slice: 1;
-          transform: rotate(48deg) scale(1) translate(-50%, -50%);
-          transition: none;
-        }
+        width: @condo-checkbox-checkmark-width;
+        height: @condo-checkbox-checkmark-height;
+        border-width: 3px;
+        border-image-source: linear-gradient(45deg, #4cd174 0%, #6db8f2 100%);
+        border-image-slice: 1;
+        transform: rotate(48deg) scale(1) translate(-50%, -50%);
+        transition: none;
       }
     }
 
     &-disabled {
+      & > .condo-checkbox-inner {
+        background-color: @condo-global-color-gray-1;
+        //border color in disabled is defined with !important so I need to use it to override
+        border-color: @condo-global-color-gray-3 !important;
+      }
+
       &.condo-checkbox-checked > .condo-checkbox-inner {
         &::before {
           background: @condo-global-color-gray-1;
@@ -137,11 +91,24 @@
           border-image-source: none;
         }
       }
+    }
 
-      & > .condo-checkbox-inner {
-        background-color: @condo-global-color-gray-1;
-        //border color in disabled is defined with !important so I need to use it to override
-        border-color: @condo-global-color-gray-3 !important;
+    &-input:focus + .condo-checkbox-inner {
+      background: @condo-global-color-brand-gradient-5 border-box;
+      border-color: transparent;
+
+      &::before {
+        .condo-checkbox-inner-layer(@condo-global-color-white, @checkbox-inner-border-radius);
+      }
+    }
+
+    &-indeterminate.condo-checkbox-disabled > .condo-checkbox-inner {
+      &::after {
+        background: @condo-global-color-gray-5;
+      }
+
+      &::before {
+        .condo-checkbox-inner-layer(@condo-global-color-white, @checkbox-inner-border-radius);
       }
     }
 
@@ -154,37 +121,42 @@
       background-color: transparent;
       border-radius: @checkbox-border-radius;
       visibility: visible;
-      content: '';
+      content: "";
     }
   }
 
-  &:hover {
-    & > .condo-checkbox {
-      & > .condo-checkbox-inner {
-        border-color: @condo-global-color-gray-7;
-      }
+  &:hover > .condo-checkbox > .condo-checkbox-inner {
+    border-color: @condo-global-color-gray-7;
+  }
 
-      &::after {
-        visibility: visible;
-      }
+  &:hover > .condo-checkbox-checked > .condo-checkbox-inner::before {
+    border-radius: @checkbox-inner-border-radius;
+  }
+
+  .condo-checkbox-indeterminate > .condo-checkbox-input:focus + .condo-checkbox-inner::before {
+    .condo-checkbox-inner-layer(@condo-global-color-brand-gradient-1, @checkbox-inner-border-radius);
+  }
+
+  &:hover > .condo-checkbox-checked > .condo-checkbox-inner {
+    background: @condo-global-color-brand-gradient-5 border-box;
+    border-color: transparent;
+  }
+
+  &:hover > .condo-checkbox-disabled > .condo-checkbox-inner {
+    background: @condo-global-color-gray-1 border-box;
+    border-color: transparent;
+  }
+
+  .condo-checkbox-checked > .condo-checkbox-input:focus + .condo-checkbox-inner {
+    background: @condo-global-color-brand-gradient-5 border-box;
+    border-color: transparent;
+
+    &::before {
+      .condo-checkbox-inner-layer(@condo-global-color-brand-gradient-1, @checkbox-inner-border-radius);
     }
+  }
 
-    & > .condo-checkbox-checked {
-      & > .condo-checkbox-inner {
-        background: @condo-global-color-brand-gradient-5 border-box;
-        border-color: transparent;
-
-        &::before {
-          border-radius: @checkbox-inner-border-radius;
-        }
-      }
-    }
-
-    & > .condo-checkbox-disabled {
-      & > .condo-checkbox-inner {
-        background: @condo-global-color-gray-1 border-box;
-        border-color: transparent;
-      }
-    }
+  &:hover > .condo-checkbox::after {
+    visibility: visible;
   }
 }
