--- a/packages/ui/src/components/Radio/style.less
+++ b/packages/ui/src/components/Radio/style.less
@@ -12,27 +12,21 @@
 .condo-radio-wrapper {
   align-items: center;
 
-  .condo-radio {
-    &-input {
-      margin: 0;
+  .condo-radio-input {
+    margin: 0;
+  }
 
-      &:focus {
-        & + .condo-radio-inner {
-          .condo-radio-gradient-border(linear-gradient(white, white), @condo-global-color-brand-gradient-5);
-        }
-      }
-    }
+  .condo-radio-inner {
+    box-sizing: content-box;
+    border-color: @condo-global-color-gray-5;
+    transition: none;
 
-    &-inner {
-      box-sizing: content-box;
-      border-color: @condo-global-color-gray-5;
+    &::after {
       transition: none;
-
-      &::after {
-        transition: none;
-      }
     }
+  }
 
+  .condo-radio {
     &-checked {
       & > .condo-radio-inner {
         background: @condo-global-color-brand-gradient-1;
@@ -45,14 +39,6 @@
           background: @condo-global-color-brand-gradient-5;
           border-radius: 100%;
           transform: translate(-50%, -50%);
-        }
-      }
-
-      & > .condo-radio-input {
-        &:focus {
-          & + .condo-radio-inner {
-            .condo-radio-gradient-border(@condo-global-color-brand-gradient-1, @condo-global-color-brand-gradient-7);
-          }
         }
       }
     }
@@ -84,6 +70,14 @@
         border-color: @condo-global-color-gray-5;
       }
     }
+  }
+
+  .condo-radio-input:focus + .condo-radio-inner {
+    .condo-radio-gradient-border(linear-gradient(white, white), @condo-global-color-brand-gradient-5);
+  }
+
+  .condo-radio-checked > .condo-radio-input:focus + .condo-radio-inner {
+    .condo-radio-gradient-border(@condo-global-color-brand-gradient-1, @condo-global-color-brand-gradient-7);
   }
 }
 
