--- a/packages/ui/src/components/Radio/mixins.less
+++ b/packages/ui/src/components/Radio/mixins.less
@@ -1,7 +1,9 @@
+@import (reference) "@open-condo/ui/src/tokens/variables.less";
+
 .condo-radio-gradient-border(@inner-color, @border-color) {
-  border: double 1px transparent;
   background-image: @inner-color, @border-color;
-  background-origin: border-box;
   background-clip: content-box, border-box;
+  background-origin: border-box;
+  border: double @condo-global-border-width-default transparent;
   box-shadow: none;
 }
