--- a/packages/ui/src/components/style/core/breakpoints.less
+++ b/packages/ui/src/components/style/core/breakpoints.less
@@ -6,13 +6,13 @@
 @desktop-large-screen: 1200px;
 
 @from-mobile-small: ~"screen and (min-width: "@mobile-small-screen~")";
-@to-mobile-small: ~"and (max-width: "@mobile-large-screen - 1px~")";
+@to-mobile-small: ~"(max-width: "@mobile-large-screen - 1px~")";
 @from-mobile-large: ~"screen and (min-width: "@mobile-large-screen~")";
-@to-mobile-large:  ~"and (max-width: "@tablet-small-screen - 1px~")";
+@to-mobile-large:  ~"(max-width: "@tablet-small-screen - 1px~")";
 @from-tablet-small: ~"screen and (min-width: "@tablet-small-screen~")";
-@to-tablet-small: ~"and (max-width: "@tablet-large-screen - 1px~")";
+@to-tablet-small: ~"(max-width: "@tablet-large-screen - 1px~")";
 @from-tablet-large: ~"screen and (min-width: "@tablet-large-screen~")";
-@to-tablet-large: ~"and (max-width: "@desktop-small-screen - 1px~")";
+@to-tablet-large: ~"(max-width: "@desktop-small-screen - 1px~")";
 @from-desktop-small: ~"screen and (min-width: "@desktop-small-screen~")";
-@to-desktop-small: ~"and (max-width: "@desktop-large-screen - 1px~")";
+@to-desktop-small: ~"(max-width: "@desktop-large-screen - 1px~")";
 @from-desktop-large: ~"screen and (min-width: "@desktop-large-screen~")";
