feat(ui): DOMA-5597 reworked component Select
BREAKING-CHANGE: Select component no longer have "children" prop.
Option and OptGroup components no longer have export from "@open-condo/ui".
Now you should use "options" prop in Select component

fix(ui): DOMA-5597 fixed Select styles. Fixed analytics

--- a/packages/ui/src/components/Select/style.less
+++ b/packages/ui/src/components/Select/style.less
@@ -50,6 +50,10 @@
     color: @condo-global-color-black;
   }
 
+  &.condo-select-single.condo-select-show-arrow .condo-select-selection-item {
+    color: @condo-global-color-black;
+  }
+
   .condo-select-selection-placeholder {
     color: @condo-global-color-gray-7;
   }
@@ -232,7 +236,7 @@
   }
 
   &:not(.condo-select-disabled):hover .condo-select-selector {
-    border-color: transparent;
+    border-color: @condo-global-color-gray-7;
   }
 }
 
@@ -298,6 +302,10 @@
   .condo-select-item {
     min-height: @condo-global-line-height-text-m;
     line-height: @condo-global-line-height-text-s;
+  }
+
+  .condo-select-item-hidden {
+    display: none;
   }
 
   .condo-select-item-option-selected:not(.condo-select-item-option-disabled) {
