feat(condo): DOMA-5430 reworked RadioGroup and Radio
BREAKING-CHANGE: RadioGroup component no longer have "groups" prop.
 Should use "children" and RadioGroup.ItemGroup component

fix(condo): DOMA-5430 deleted the wave animation when click on Radio

--- a/packages/ui/src/components/Radio/style.less
+++ b/packages/ui/src/components/Radio/style.less
@@ -51,6 +51,10 @@
     }
   }
 
+  .condo-radio-checked::after {
+    content: none;
+  }
+
   &:hover {
     & > .condo-radio {
       & > .condo-radio-inner {
