--- a/packages/ui/src/components/Banner/style.less
+++ b/packages/ui/src/components/Banner/style.less
@@ -23,35 +23,83 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
-    padding: @condo-global-spacing-60 @condo-global-spacing-12 @condo-global-spacing-60 @condo-global-spacing-60;
+    padding: @condo-global-spacing-60 @condo-global-spacing-32 @condo-global-spacing-60 @condo-global-spacing-60;
+  }
 
-    &-md,
-    &-sm {
-      padding: @condo-global-spacing-52 @condo-global-spacing-12 @condo-global-spacing-52 @condo-global-spacing-40;
-    }
+  &-md > &-content-container,
+  &-sm > &-content-container {
+    padding: @condo-global-spacing-52 @condo-global-spacing-32 @condo-global-spacing-52 @condo-global-spacing-40;
+  }
 
-    &-xs {
-      padding: @condo-global-spacing-40;
-    }
+  &-xs > &-content-container {
+    padding: @condo-global-spacing-40;
+  }
 
-    &-xxs {
-      padding: @condo-global-spacing-40 @condo-global-spacing-32;
-    }
+  &-xxs > &-content-container {
+    padding: @condo-global-spacing-40 @condo-global-spacing-32;
   }
 
   &-no-image > &-content-container {
     width: 100%;
     padding-right: @condo-global-spacing-60;
-
-    &-md,
-    &-sm {
-      padding-right: @condo-global-spacing-52;
-    }
   }
 
   &-text-container {
     & > *:not(:last-child) {
       margin-bottom: @condo-global-spacing-16;
+    }
+  }
+
+  &-small {
+    height: 180px;
+
+    .condo-promo-block-content-container {
+      padding: @condo-global-spacing-32 @condo-global-spacing-40 @condo-global-spacing-32 @condo-global-spacing-40;
+
+      .condo-promo-block-text-container {
+        width: 100%;
+
+        h4.condo-typography {
+          margin-bottom: @condo-global-spacing-12;
+        }
+      }
+    }
+  }
+
+  &-sm.condo-promo-block-small,
+  &-xs.condo-promo-block-small,
+  &-xxs.condo-promo-block-small {
+    height: 172px;
+
+    .condo-promo-block-content-container {
+      padding: @condo-global-spacing-24 @condo-global-spacing-24 @condo-global-spacing-32;
+    }
+  }
+
+  &-xs.condo-promo-block-small,
+  &-xxs.condo-promo-block-small {
+    height: 196px;
+  }
+
+  &-md.condo-promo-block-no-image > &-content-container,
+  &-sm.condo-promo-block-no-image > &-content-container {
+    padding-right: @condo-global-spacing-52;
+  }
+
+  &:not(.condo-promo-block-no-image) .condo-promo-block-text-container {
+    max-width: 420px;
+  }
+
+  &-action-link {
+    display: flex;
+    align-items: center;
+
+    & > .condo-typography {
+      margin-right: @condo-global-spacing-4;
+    }
+
+    .condo-promo-block-action-icon {
+      margin-top: 3px;
     }
   }
 
