--- a/packages/ui/src/components/Carousel/style.less
+++ b/packages/ui/src/components/Carousel/style.less
@@ -15,14 +15,18 @@
 
       & button {
         background: transparent;
-        border: @condo-global-border-width-default solid @condo-global-color-white;
+        border: @condo-global-border-width-default solid @condo-global-color-black;
         border-radius: @condo-global-border-radius-small;
         opacity: @condo-global-opacity-disabled;
+      }
+
+      &.slick-active button {
+        background-color: @condo-global-color-black;
       }
     }
 
     &-bottom {
-      bottom: @condo-global-spacing-40;
+      bottom: @condo-global-spacing-12;
       margin-top: 0;
       margin-bottom: 0;
     }
@@ -71,7 +75,7 @@
 
   & .slick-list {
     margin: 0 (-@condo-carousel-slide-gap / 2);
-    padding: @condo-global-spacing-20 0;
+    padding: 0;
 
     // NOTE: Force all slides to have same width
     & > .slick-track {
