feat(condo): DOMA-6013 Enrich recurrent payment notifications with ne… (#3273)
* feat(condo): DOMA-6013 Enrich recurrent payment notifications with new types and end user messages

* fix(condo): DOMA-6013 Enrich recurrent payment notifications with default templates

--- a/apps/condo/lang/en/messages/RECURRENT_PAYMENT_TOMORROW_PAYMENT_MESSAGE/default.njk
+++ b/apps/condo/lang/en/messages/RECURRENT_PAYMENT_TOMORROW_PAYMENT_MESSAGE/default.njk
@@ -1,1 +1,2 @@
-Automatic payment of receipts scheduled for tomorrow
+Autopayment reminder 😉
+Payment will be made tomorrow. Make sure there are enough funds on the card
