fix(ui): DOMA-5893 add fixedContentWidth prop to Modal component

--- a/packages/ui/src/components/Modal/style.less
+++ b/packages/ui/src/components/Modal/style.less
@@ -87,6 +87,16 @@
       }
     }
 
+    &.condo-modal-fixed-width {
+      .condo-modal-body {
+        overflow-x: hidden;
+
+        .condo-modal-wrapper {
+          width: 100%;
+        }
+      }
+    }
+
     .condo-modal-footer {
       padding: @condo-modal-half-padding-without-border @condo-modal-padding @condo-modal-half-padding;
       border-top: @condo-global-border-width-default solid @condo-modal-header-scrolling-border-bottom-color;
