--- a/packages/ui/src/components/Radio/style.less
+++ b/packages/ui/src/components/Radio/style.less
@@ -85,6 +85,12 @@
   }
 }
 
+.condo-radio-icon {
+  display: inline-flex;
+  margin-right: @condo-global-spacing-8;
+  color: @condo-global-color-black;
+}
+
 .condo-radio-group {
   display: flex;
   flex-direction: column;
@@ -122,5 +128,80 @@
 
   & > .condo-radio-group-container:not(:first-child) {
     margin-top: @condo-global-spacing-24;
+  }
+}
+
+.condo-radio-group.condo-radio-button {
+  display: inline-flex;
+  flex-direction: row;
+  width: 100%;
+  min-height: calc(@condo-global-spacing-40 + @condo-global-spacing-8);
+  padding: @condo-global-spacing-4;
+  white-space: nowrap;
+  background: @condo-global-color-gray-3;
+  border-radius: @condo-global-border-radius-large;
+
+  & > .condo-radio-button-wrapper,
+  & > .condo-radio-button-wrapper .condo-typography {
+    line-height: @condo-global-spacing-40;
+  }
+
+  & > .condo-radio-button-wrapper .condo-typography {
+    .condo-typography-h5();
+  }
+
+  & > .condo-radio-button-wrapper > span:not(.condo-radio-button) {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    height: 100%;
+    min-height: @condo-global-spacing-40;
+  }
+
+  & > .condo-radio-button-wrapper .condo-radio-label-container {
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  & > .condo-radio-button-wrapper {
+    flex: 1;
+    height: 100%;
+    background: @condo-global-color-gray-3;
+    border: none;
+    box-shadow: none;
+    transition: none;
+  }
+
+  & > .condo-radio-button-wrapper::before {
+    display: none;
+  }
+
+  & > .condo-radio-button-wrapper.condo-radio-button-wrapper-disabled {
+    .condo-typography,
+    .condo-radio-icon {
+      color: @condo-global-color-gray-7;
+    }
+  }
+
+  & > .condo-radio-button-wrapper:not(.condo-radio-button-wrapper-disabled, .condo-radio-button-wrapper-checked):hover {
+    .condo-radio-icon {
+      color: @condo-global-color-green-5;
+    }
+
+    .condo-typography {
+      background-color: @condo-global-color-black;
+      background-image: @condo-global-color-brand-gradient-5;
+      background-size: 100%;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+  }
+
+  .condo-radio-button-wrapper-checked:not(&-disabled).condo-radio-button-wrapper {
+    background: @condo-global-color-white;
+    border-radius: @condo-global-border-radius-medium;
+    box-shadow: @condo-global-box-shadow-default;
   }
 }
