--- a/apps/condo/lang/en/messages/BILLING_RECEIPT_CATEGORY_AVAILABLE/push.njk
+++ b/apps/condo/lang/en/messages/BILLING_RECEIPT_CATEGORY_AVAILABLE/push.njk
@@ -1,1 +1,1 @@
-Pay for {{ message.meta.categoryName }} in the Doma app
+Pay for {{ message.meta.categoryName }} in Domá app. For the first payment enter account number
