--- a/apps/condo/lang/ru/messages/BILLING_RECEIPT_CATEGORY_AVAILABLE/default.njk
+++ b/apps/condo/lang/ru/messages/BILLING_RECEIPT_CATEGORY_AVAILABLE/default.njk
@@ -1,1 +1,1 @@
-Оплатите счета за {{ message.meta.categoryName }} в приложении Domá
+Оплатите {{ message.meta.categoryName }} в приложении Domá. Для первой оплаты введите лицевой счет
