DOMA-6382 fixes for webview (#3478)
* fix(condo): DOMA-6382 made ContactEditor fields responsive

* fix(condo): DOMA-6382 fix property id page row marign

* fix(ui): DOMA-6382 fix action bar width

* fix(condo): DOMA-6382 change router push to router replace for filters update

--- a/packages/ui/src/components/ActionBar/style.less
+++ b/packages/ui/src/components/ActionBar/style.less
@@ -9,15 +9,14 @@
 @condo-action-bar-large-screen-bottom-indent: @condo-global-spacing-24;
 
 .condo-affix-content-wrapper {
-  position: relative;
-  right: @condo-action-bar-overflow-width;
   box-sizing: border-box;
-  width: @condo-action-bar-width;
   height: fit-content !important;
   padding: @condo-action-bar-overflow-width;
   transition: box-shadow @condo-global-transition-duration-default ease-out;
 
   @media @from-mobile-small and @to-tablet-small {
+    width: 100%;
+
     & > .condo-space-item {
       width: 100%;
 
@@ -25,6 +24,12 @@
         width: 100%;
       }
     }
+  }
+
+  @media @from-tablet-large {
+    position: relative;
+    right: @condo-action-bar-overflow-width;
+    width: @condo-action-bar-width;
   }
 }
 
