feat(condo): DOMA-6552 recurrent payments proceeding - do retry for certain errors and lastTry template param support (#3559)
* feat(condo): DOMA-6552 recurrent payments proceeding - do retry for certain errors

* feat(condo): DOMA-6552 recurrent payments proceeding - use different message body depends on lastTry parameter

* feat(condo): DOMA-6552 recurrent payments proceeding - use different message body depends on lastTry parameter

--- a/apps/condo/lang/en/messages/RECURRENT_PAYMENT_PROCEEDING_LIMIT_EXCEEDED_ERROR_MESSAGE/default.njk
+++ b/apps/condo/lang/en/messages/RECURRENT_PAYMENT_PROCEEDING_LIMIT_EXCEEDED_ERROR_MESSAGE/default.njk
@@ -1,1 +1,5 @@
-The utility bill amount exceeds the auto payment limit. Check out autopayment settings
+{%- if message.meta.data.lastTry -%}
+The utility bill amount exceeds the auto payment limit. Check out autopyment settings
+{%- else -%}
+Increase the autopayment limit, we will try to debit again tomorrow
+{% endif %}
