feat(ui): DOMA-6580 added radio button only with icon (#3581)

--- a/packages/ui/src/components/Radio/style.less
+++ b/packages/ui/src/components/Radio/style.less
@@ -87,8 +87,11 @@
 
 .condo-radio-icon {
   display: inline-flex;
-  margin-right: @condo-global-spacing-8;
   color: @condo-global-color-black;
+
+  & ~ .condo-typography {
+    margin-left: @condo-global-spacing-8 !important;
+  }
 }
 
 .condo-radio-group {
