feat(condo): DOMA-6669 organization select minor improvements (#3628)
* fix(ui): DOMA-6669 increased modal z-index

* fix(condo): DOMA-6669 added scroll to organization selector

* chore(condo): DOMA-6669 added id to setup-report button

--- a/apps/condo/domains/common/components/containers/global-styles.css
+++ b/apps/condo/domains/common/components/containers/global-styles.css
@@ -134,8 +134,9 @@
   transform: rotate(180deg);
 }
 
-.organization-dropdown-overlay {
-  z-index: 100;
+.organization-dropdown-overlay .ant-dropdown-menu {
+  max-height: 360px;
+  overflow-y: auto;
 }
 
 .organization-selector .condo-typography {
