hotfix: z-index issue fixed (#3635)
* hotfix(ui): returned modal z-index default value

* hotfix(condo): decreased notifications z-index

--- a/apps/condo/domains/common/components/containers/global-styles.css
+++ b/apps/condo/domains/common/components/containers/global-styles.css
@@ -199,3 +199,10 @@
   background: var(--condo-global-color-brand-gradient-5) border-box;
   opacity: 1;
 }
+
+/* Notifications */
+
+/* Note: all notifications must be below modal */
+.ant-notification {
+  z-index: 999;
+}
