--- a/packages/ui/src/components/Tag/style.less
+++ b/packages/ui/src/components/Tag/style.less
@@ -6,7 +6,27 @@
   .condo-typography-h6();
 
   margin: 0;
-  padding: 0.17em 0.83em 0.33em;
+  padding: 0.2em 0.83em 0.3em;
   border: none;
   border-radius: @condo-global-border-radius-large;
+
+  &-content {
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    .condo-tag-icon-start,
+    .condo-tag-icon-end {
+      position: relative;
+      display: inline-flex;
+    }
+
+    .condo-tag-icon-start {
+      margin-right: 4px;
+    }
+
+    .condo-tag-icon-end {
+      margin-left: 4px;
+    }
+  }
 }
