feat(ui): DOMA-6670 added Button with dropdown items (#3634)
* feat(ui): DOMA-6670 added Button with Dropdown items

* fix(ui): DOMA-6670 fixed after design-review

* fix(ui): DOMA-6670 fixed after design-review

* fix(ui): DOMA-6670 fixed after design-review

* fix(ui): DOMA-6670 fixed after review

* feat(ui): DOMA-6670 added analytics for dropdown

* fix(ui): DOMA-6670 fixed after review

* fix(ui): DOMA-6670 fixed after review

* feat(ui): DOMA-6670 added Dropdown component

refactor(ui): DOMA-6670 refactored dropdown button

* feat(ui): DOMA-6670 added global animation import

* fix(ui): DOMA-6670 fixed story name

* fix(condo): DOMA-6670 fixed default dropdown

* fix(condo): DOMA-6670 fixed imports

* chore(ui): DOMA-6670 changed Dropdown types

* refactor(ui): DOMA-6670 refactored analytics for Dropdown

* refactor(ui): DOMA-6670 refactored Dropdown and DropdownButton

* fix(ui): DOMA-6670 fixed imports

refactor(ui): DOMA-6670 refactored after review

* fix(ui): DOMA-6670 fixed types

--- a/packages/ui/src/components/style/core/global.less
+++ b/packages/ui/src/components/style/core/global.less
@@ -3,6 +3,7 @@
 // Monospace font is used for code blocks
 @import "https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap";
 @import (reference) "@open-condo/ui/src/tokens/variables.less";
+@import "@open-condo/ui/src/components/style/core/motion";
 
 @text-color: @condo-global-color-black;
 @heading-color: @condo-global-color-black;
