feat(ui): DOMA-8921 updated Checkbox (#4675)
* feat(ui): DOMA-8921 updated Checkbox

* refactor(ui): DOMA-8921 fixed stylelint

* feat(ui): DOMA-8921 remove prop Checkbox.focus

* refactor(condo): DOMA-8921 refactored after review

--- a/packages/ui/src/components/Checkbox/mixins.less
+++ b/packages/ui/src/components/Checkbox/mixins.less
@@ -1,9 +1,10 @@
-.condo-checkbox-inner-layer(@color, @checkbox-inner-border-radius) {
+.condo-checkbox-layer(@margin) {
   position: absolute;
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  background: @color border-box;
-  border-radius: @checkbox-inner-border-radius;
+  top: @margin;
+  right: @margin;
+  bottom: @margin;
+  left: @margin;
+  display: block;
+  border-radius: inherit;
   content: "";
 }
