hotfix(ui): DOMA-8998 fixed radio group with button type (#4721)
* hotfix(ui): DOMA-8998 fixed radio group with button type

* hotfix(ui): DOMA-8998 fixed mixin call

--- a/packages/ui/src/components/Button/icon/style.less
+++ b/packages/ui/src/components/Button/icon/style.less
@@ -19,7 +19,7 @@
   background-color: transparent;
   border: none;
   border-radius: @condo-icon-button-border-radius-medium;
-  .condo-transition(background);
+  .condo-transition(background;);
 
   span {
     position: relative;
@@ -42,18 +42,18 @@
 
     background: @condo-global-color-brand-gradient-1;
     opacity: 0;
-    .condo-transition(opacity);
+    .condo-transition(opacity;);
   }
 
   .condo-icon-btn-content {
     display: inline-flex;
     color: @condo-global-color-black;
-    .condo-transition(color);
+    .condo-transition(color;);
 
     svg {
       color: @condo-global-color-black;
       fill: currentcolor;
-      .condo-transition(color);
+      .condo-transition(color;);
     }
   }
 
