--- a/packages/ui/src/components/Checkbox/style.less
+++ b/packages/ui/src/components/Checkbox/style.less
@@ -24,14 +24,14 @@
     top: 0;
     border-color: @condo-global-color-gray-5;
 
-    .condo-transition(border-color);
+    .condo-transition(border-color;);
 
     &-inner {
       box-sizing: content-box;
       border-color: @condo-global-color-gray-5;
       outline: none;
 
-      .condo-transition(border-color, opacity);
+      .condo-transition(border-color, opacity;);
 
       // Before layer is used to show gradient outline on tab-focusing
       &::before {
