--- a/packages/ui/src/components/Typography/style.less
+++ b/packages/ui/src/components/Typography/style.less
@@ -6,7 +6,7 @@
 
 .condo-typography {
   @condo-typography-decoration-thickness: 1px;
-  .condo-transition(color, opacity, text-decoration-color);
+  .condo-transition(color, opacity, text-decoration-color;);
 
   word-break: break-word;
 
